<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/motionLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_yellow"
        app:layoutDescription="@xml/fragment_enter_scene">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/enter_title_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".05" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/welcome_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to"
            android:textColor="@color/food_red"
            android:textSize="@dimen/text_large" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/enter_title"
            style="@style/MainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/travel_and_eat" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/enter_logo"
            android:layout_width="@dimen/main_logo_size"
            android:layout_height="@dimen/main_logo_size"
            android:layout_marginTop="@dimen/margin_very_large"
            android:src="@drawable/ic_icon_food_eat_larger" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/enter_button"
            style="@style/RedSolidButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_large"
            android:text="@string/enter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enter_logo"
            app:layout_constraintVertical_bias="1" />


    </androidx.constraintlayout.motion.widget.MotionLayout>

</layout>