<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="url"
            type="String" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_app">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/details_thumb"
            android:layout_width="@dimen/details_image_size"
            android:layout_height="@dimen/details_image_size"
            android:layout_marginTop="@dimen/margin_regular"
            imageUrl="@{url}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details_dish_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/ScreenTitle"
            tools:text="Poutine"
            android:textSize="32sp"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_regular"
            android:layout_marginStart="@dimen/margin_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_thumb"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details_dish_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/ListItemDescription"
            tools:text="Poutine"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintStart_toStartOf="@id/details_dish_name"
            app:layout_constraintEnd_toEndOf="@id/details_dish_name"
            app:layout_constraintTop_toBottomOf="@id/details_dish_name"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details_location_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TitleText"
            android:text="@string/location"
            android:layout_marginTop="@dimen/margin_large"
            app:layout_constraintStart_toStartOf="@id/details_dish_name"
            app:layout_constraintEnd_toEndOf="@id/details_dish_name"
            app:layout_constraintTop_toBottomOf="@id/details_dish_category"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details_location_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/ListItemDescription"
            android:textSize="14sp"
            tools:text="Restaurant near you"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintStart_toStartOf="@id/details_dish_name"
            app:layout_constraintEnd_toEndOf="@id/details_dish_name"
            app:layout_constraintTop_toBottomOf="@id/details_location_title"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details_meal_value_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TitleText"
            android:text="@string/meal_price"
            android:layout_marginTop="@dimen/margin_regular"
            app:layout_constraintStart_toStartOf="@id/details_dish_name"
            app:layout_constraintEnd_toEndOf="@id/details_dish_name"
            app:layout_constraintTop_toBottomOf="@id/details_location_text"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details_meal_value_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/ListItemDescription"
            android:textSize="14sp"
            tools:text="$20.00"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintStart_toStartOf="@id/details_dish_name"
            app:layout_constraintEnd_toEndOf="@id/details_dish_name"
            app:layout_constraintTop_toBottomOf="@id/details_meal_value_title"
            app:layout_constraintVertical_bias="0"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/edit_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/RedStrokeButton"
            android:text="@string/edit"
            android:layout_marginStart="@dimen/margin_regular"
            android:layout_marginEnd="@dimen/margin_regular"
            android:layout_marginBottom="@dimen/margin_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintTop_toBottomOf="@id/details_meal_value_text"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>